--- a/docs/reference/releases/1.0.rst
+++ b/docs/reference/releases/1.0.rst
@@ -1,10 +1,3 @@
-##########################
-Change Log & Release Notes
-##########################
-
-This document contains a summary of the new features, changes, fixes and known
-issues in each release of Trusted Firmware-M.
-
 ***********
 Version 1.0
 ***********
@@ -74,9 +67,9 @@ Current release has been tested on:
 
 Other supported platforms:
 
-    - Dual CPU system:
+    - Dual Core Cortex-M system:
 
-        - `Cypress PSoC64.
+        - `Cypress PSoc64.
           <https://www.cypress.com/documentation/product-brochures/cypress-psoc-64-secure-microcontrollers>`__
 
 Platform Limitations
