--- a/docs/releases/1.2.0.rst
+++ b/docs/releases/1.2.0.rst
@@ -12,7 +12,7 @@ New features
   - Add Profile Medium.
   - Migrate support to Mbed TLS v2.24.
   - New platforms added.
-    See :ref:`docs/reference/releases/1.2.0:New platforms supported` for
+    See :ref:`docs/releases/1.2.0:New platforms supported` for
     details.
   - New SPM HAL APIs including isolation API and logging API.
   - Update MCUboot version to 1.7.0-rc1.
@@ -25,7 +25,7 @@ New security advisories
 Stack sealing
 -------------
 
-Refer to :doc:`Advisory TFMV-1</docs/reference/security_advisories/stack_seal_vulnerability>`
+Refer to :doc:`Advisory TFMV-1</docs/security/security_advisories/stack_seal_vulnerability>`
 for more details.
 A common mitigation is included in this release.
 
@@ -139,4 +139,4 @@ hardware limitations or 3rd-party tools and therefore won't be fixed by TF-M.
 
 --------------
 
-*Copyright (c) 2020, Arm Limited. All rights reserved.*
+*Copyright (c) 2020-2021, Arm Limited. All rights reserved.*
