Docs: Refine tfm_sw_requirement.rst
Simplify the tfm software requirement document and change the document
to 'tfm_getting_started.rst', let it more
suitable for new starter.

Signed-off-by: Summer Qin <summer.qin@arm.com>
Change-Id: I10379aa92ac2c6cd784f0fd1b1b5431243716d74

--- a/docs/releases/1.3.0.rst
+++ b/docs/releases/1.3.0.rst
@@ -148,7 +148,7 @@ TF-M.
       | 10-2020-q4-major.
       | The support for CMSE feature is broken in version 10-2020-q4-major. The
       | fix will be available in future release version.
-      | A note is added in :ref:`docs/getting_started/tfm_sw_requirement:C compilers`.
+      | A note is added in :ref:`docs/getting_started/tfm_getting_started:Install a toolchain`.
     - https://gcc.gnu.org/bugzilla/show_bug.cgi?id=99157
 
 Reference
