Docs: Clean and restructure the Integration guide
Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: I8dca6e3d5cf5cae3a5cd3dc8f2b1e518ab3c20cf

--- a/docs/releases/1.3.0.rst
+++ b/docs/releases/1.3.0.rst
@@ -60,7 +60,7 @@ The following platforms have been removed from TF-M code base.
   - SSE-200_AWS
   - AN539
 
-See :doc:`Platform deprecation and removal </platform/ext/platform_deprecation>`
+See :doc:`/integration_guide/platform/platform_deprecation`
 for other platforms under deprecation process.
 
 Tested platforms
