--- a/docs/releases/1.4.0.rst
+++ b/docs/releases/1.4.0.rst
@@ -42,7 +42,7 @@ The following platforms have been removed from TF-M code base.
   - nRF5340 PDK
   - Musca_A
 
-See :doc:`Platform deprecation and removal </platform/ext/platform_deprecation>`
+See :doc:`/integration_guide/platform/platform_deprecation`
 for other platforms under deprecation process.
 
 Tested platforms
