Platform: Corstone310 directory reorg
Signed-off-by: Dávid Házi <david.hazi@arm.com>
Change-Id: I38e27c6d9b4dc68a9b15cbf3f0fe8d99b9608efc

--- a/docs/releases/1.5.0.rst
+++ b/docs/releases/1.5.0.rst
@@ -43,7 +43,7 @@ New platforms supported
 
   - :doc:`Corstone-1000 </platform/arm/corstone1000/readme>`
 
-  - :doc:`Corstone-Polaris </platform/arm/mps3/corstone310_fvp/README>`
+  - :doc:`Corstone-Polaris </platform/arm/mps3/corstone310/README>`
 
   - :doc:`B-U585I-IOT02A </platform/stm/b_u585i_iot02a/readme>`
 
@@ -122,4 +122,4 @@ won't be fixed by TF-M.
 
 --------------
 
-*Copyright (c) 2021, Arm Limited. All rights reserved.*
+*Copyright (c) 2021-2022, Arm Limited. All rights reserved.*
