Platform: Remove Musca-B1 Secure Enclave port
Signed-off-by: Mark Horvath <mark.horvath@arm.com>
Change-Id: I1813be1051ad8d4773231b6ec970a05b0db1b84c

--- a/docs/releases/1.3.0.rst
+++ b/docs/releases/1.3.0.rst
@@ -50,7 +50,7 @@ New platforms supported
 
   - Secure Enclave system:
 
-    - :doc:`Musca-B1 Secure Enclave. </platform/arm/musca_b1/secure_enclave/readme>`
+    - Musca-B1 Secure Enclave (deprecated after TF-M v1.6.0).
 
 Deprecated platforms
 ====================
