--- a/docs/releases/1.3.0.rst
+++ b/docs/releases/1.3.0.rst
@@ -168,7 +168,7 @@ Reference
 
   .. [6] :doc:`Code sharing between independently linked XIP binaries </design_docs/code_sharing>`
 
-  .. [7] :doc:`Security Handling </security/security>`
+  .. [7] :doc:`Security Handling </security/index>`
 
 --------------
 
